[package]
name = "du2"
version = "0.2.2"
authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"
homepage="https://github.com/sflanaga/du2"
documentation="https://github.com/sflanaga/du2"
repository="https://github.com/sflanaga/du2"
description = "Fast parallel file system lister / usage statistics summary"

readme="README.md"
keywords=["disk", "NFS", "tool", "file"]


[profile.release]
debug = false
debug-assertions = false
# lto does help but not by much with pcre2
lto = true
codegen-units=1
opt-level = 3
trustflags = ["-C", "target-cpu=native"]


[target.'cfg(unix)'.dependencies]
users = "0.10.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }


[dependencies]
structopt = {version = "0.3.15", feature=["color","termsize","wrap_help"]}
cpu-time = "1.0.0"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
anyhow = "1.0.31"
num-format = "0.4.0"
regex = "1.3.9"

